modified:   index.html 	modified:   login.html 	modified:   prison_break.html 	modified:   static/css/style.css 	new file:   static/img/dark.jpg 	new file:   static/js/login.js 	new file:   static/js/triviaPrisonBreak.js 	new file:   triviaPrisionBreak.html 	modified:   tron.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body id="index">
     <div class="links">
-        <a  href="login.html">Iniciar sesion</a>
+        <a href="login.html">Iniciar sesion</a>
     </div>
 
     <div class="container_index">
@@ -39,18 +39,23 @@
     <table>
         <tr>
             <td>
-                <img class="img_portada" src="static/img/portada_tron.jpg" alt=""> <br>
+                <img  class="img_portada" src="static/img/portada_tron.jpg" alt=""> <br>
                 <a href="tron.html">TRON: The Legacy</a>
             </td>
             <td>
                 <img class="img_portada" src="static/img/portada_prison_break.jpg" alt=""> <br>
                 <a href="prison_break.html">Prison Break</a>
             </td>
+            <td>
+                <img class="img_portada" src="static/img/dark.jpg" alt=""> <br>
+                <a href="">Dark (2017)</a>
+            </td>
         </tr>
     </table> <br>
 
     <h4> <label for="comentarios"> Comentarios: </label></h4>
-    <input class="caja" type="text" name="comentarios" id="comentarios" placeholder="Deja tus comentarios...">
+    <input class="caja" type="text" name="comentarios" id="comentarios" placeholder="Deja tus comentarios..."> <br> <br>
+    <input class="boton-login" type="button" value="Subir">
     </div> </div>
 </body>
 </html>
