--- a/prison_break.html
+++ b/prison_break.html
@@ -8,8 +8,8 @@
 </head>
 <body id="prison_break">
   <div class="links">
-    <a href="index.html">Volver a página anterior</a>
-    <a href="prison_break_opiniones.html">Opiniones de usuarios</a>
+    <a class="link_blanco" href="index.html">Volver a página anterior</a>
+    <a class="link_blanco" href="prison_break_opiniones.html">Opiniones de usuarios</a>
   </div>
 
     <div class="container_index">
@@ -86,7 +86,7 @@
     
     <td> 
       <p class="nombre_actor"> Robin Tunney</p>
-    <img class="img_personaje" src="static/img/veronica_donovan.jpg" >
+    <img class="img_personaje" src="static/img/veronica_donovan.jpg" alt="">
     <p>Veronica Donovan</p> </td>
     
     <td> 
@@ -144,7 +144,9 @@
       <p>Héroes</p> </td>
   </tr>
   </table>
-
+  <br><br>
+    <center> <a target="_blank" class="link_blanco" href="triviaPrisionBreak.html">--->Trivia<---</a> </center> 
+  <br><br>
 </section>
 </body>
 </html>
