--- a/tron.html
+++ b/tron.html
@@ -8,7 +8,7 @@
 </head>
 <body id="tron">
   <div class="links">
-    <a href="index.html">Volver a página anterior</a>
+    <a class="link_blanco" href="index.html">Volver a página anterior</a>
     <a href="tron_opiniones.html">Opiniones de usuarios</a>
   </div>
 
