--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 </head>
 <body id="index">
     <div class="links">
-        <a href="index.html">volver</a>
+        <a class="link_blanco" href="index.html">volver</a>
     </div>
 
     <div class="container_login ">
@@ -24,9 +24,11 @@
             <label class="text_login" for="password">contraseña</label> <br>
             <input type="text" name="password" id="password"> <br> <br> <br>
 
-            <input type="button" value="Iniciar sesion">
+            <input class="boton-login" type="button" onclick="login()" value="ingresar">
 
-            <input type="button" value="Cancelar">
+            <input class="boton-login" type="button" value="cancelar">
     </div> </div>
+
+    <script src="static/js/login.js"></script>
 </body>
 </html>
