new file:   dark.html 	modified:   index.html 	new file:   informacion.docx 	new file:   integrantes.txt 	modified:   login.html 	modified:   prison_break.html 	modified:   prison_break_opiniones.html 	new file:   registro.html 	modified:   static/css/style.css 	new file:   static/img/fondo_dark.jpg 	new file:   static/img/logo.jpg 	new file:   static/js/agregarOpinion.js 	new file:   static/js/agregarOpinionIndex.js 	modified:   static/js/login.js 	new file:   static/js/ordenarOpiniones.js 	new file:   static/js/registro.js 	modified:   static/js/triviaPrisonBreak.js 	new file:   static/js/trivia_tron.js 	modified:   triviaPrisionBreak.html 	new file:   trivia_tron.html 	modified:   tron.html 	modified:   tron_opiniones.html

--- a/prison_break.html
+++ b/prison_break.html
@@ -8,10 +8,10 @@
 </head>
 <body id="prison_break">
   <div class="links">
-    <a class="link_blanco" href="index.html">Volver a página anterior</a>
-    <a class="link_blanco" href="prison_break_opiniones.html">Opiniones de usuarios</a>
+    <a href="index.html">Volver a página anterior</a>
+    <a href="prison_break_opiniones.html">Opiniones de usuarios</a>
   </div>
-
+  
     <div class="container_index">
       <div class="item">
       <h1> Reseña Prison Break </h1>
@@ -145,7 +145,7 @@
   </tr>
   </table>
   <br><br>
-    <center> <a target="_blank" class="link_blanco" href="triviaPrisionBreak.html">--->Trivia<---</a> </center> 
+  <center><a target="_blank" class="link_blanco" href="triviaPrisionBreak.html">--->Trivia<---</a></center>
   <br><br>
 </section>
 </body>
