--- a/triviaPrisionBreak.html
+++ b/triviaPrisionBreak.html
@@ -7,7 +7,7 @@
     <title>Trivia Prison Break</title>
 </head>
 <body id="prison_break">
- <header class="barra_superior">
+ <header class="barra_superior2">
     <div class="links"> <a href="prison_break.html">Pagina principal de Prison Break</a>
     <a href="prison_break_opiniones.html">Opioniones</a></div>
     <div class="titulo-seccion"><h1> Trivia Prision Break </h1> </div> </header>
