--- a/tron.html
+++ b/tron.html
@@ -10,8 +10,7 @@
   <div class="links">
     <a class="link_blanco" href="index.html">Volver a página anterior</a>
     <a href="tron_opiniones.html">Opiniones de usuarios</a>
-  </div>
-
+  </div> 
     <div class="container_index">
       <div class="item">
       <h1> Reseña Tron legacy </h1>
@@ -112,5 +111,11 @@
   </table>
 
 </section>
+
+<br><br>
+<center><a class="link_blanco" href="trivia_tron.html">--->Trivia<---</a></center>
+
+<br><br>
+
 </body>
 </html>
