--- a/login.html
+++ b/login.html
@@ -7,27 +7,32 @@
     <title> Login </title>
 </head>
 <body id="index">
-    <div class="links">
-        <a class="link_blanco" href="index.html">volver</a>
+    <div class="links img_centrar">
+        <a href="index.html">volver</a>
+
+        <img class="logo" src="static/img/logo.jpg" alt="">
+
+        <a class="caja_sup_der" href="registro.html">registrarse</a>
     </div>
 
     <div class="container_login ">
         <div class="item_login">
 
-            <form action="login"></form>
+            <form id="loginForm">
 
-            <h3 class="text_login_title"> Iniciar sesion </h3>
-    
-            <label class="text_login" for="email">email</label> <br>
+            <h2> Iniciar sesion </h2>
+
+            <label for="email">email</label>
             <input type="text" name="email" id="email"> <br> <br>
 
-            <label class="text_login" for="password">contraseña</label> <br>
-            <input type="text" name="password" id="password"> <br> <br> <br>
+            <label for="password">contraseña</label>
+            <input type="text" name="password" id="password"> <br>
 
-            <input class="boton-login" type="button" onclick="login()" value="ingresar">
+            <div class="error" id="mensajeError"></div>
 
-            <input class="boton-login" type="button" value="cancelar">
-    </div> </div>
+            <button class="boton-login" type="submit">Ingresar</button>
+
+       </form> </div> </div>
 
     <script src="static/js/login.js"></script>
 </body>
